--- a/css/style.css
+++ b/css/style.css
@@ -26,158 +26,120 @@ body {
   background: #e08d21c4;
 }
 
+a {
+  text-decoration: none;
+}
+
+input,
+button {
+  border: none;
+  outline: none;
+  background: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+}
+
 /* header */
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding-inline: 23px;
+  padding-top: 20px;
+  background-color: lightgray;
 }
 
-.header .logo {
-  display: flex;
-  align-items: center;
-  font-family: "Times New Roman", Times, serif;
-}
-
-.search {
-  display: flex;
-  width: 400px;
-}
-
-.logo-search {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header .search .logo-search svg {
-  width: 20px;
-  height: 20px;
-  margin-left: 30px;
-  position: absolute;
-  color: #e08d21;
-}
-.header .search input {
-  width: 100%;
-  padding: 10px 10px 10px 40px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  outline: none;
-}
-
-.header .search input:focus {
-  border: 1px solid #e08d21;
-}
-
-.header .search button {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 0 5px 5px 0;
-  outline: none;
+.header img {
   cursor: pointer;
-  background-color: #e08d21;
-  color: #fff;
 }
 
-.header .nav-doc {
-  text-decoration: none;
-  color: black;
+hr {
+  background: rgba(11, 11, 11, 0.25);
+  height: 1px;
+  border: none;
+  width: 100%;
+  margin-inline: auto;
+  margin-block: 20px;
 }
 
-@media (max-width: 800px) {
-  .logo {
-    margin-left: 10px;
-  }
-  .search {
-    width: 100%;
-    margin: 10px;
-    order: 3;
-  }
-  .nav-doc {
-    margin-right: 10px;
-  }
-}
-
-/* body */
-.container {
+.main {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 20px 0;
-}
-
-.scraper-container {
-  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  max-width: 100%;
-  border-radius: 20px;
-  padding: 20px;
-  margin: 20px;
-  cursor: pointer;
-  color: black;
-  text-decoration: none;
+  padding-inline: 25px;
+  background-color: lightgray;
 }
 
-.scraper-logo {
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
-  height: 200px;
+.main--hero h2 {
+  color: #757373;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.main--hero__search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 4px;
+  color: #db7900;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  border: 4px solid #db7900;
+  border-radius: 50px;
+  padding: 4px 4px 4px 17px;
+}
+
+.main--hero__search input::placeholder {
+  color: #db7900;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+.main--hero__search input {
+  width: 100%;
+  color: #db7900;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+
+.main--hero__search img {
+  cursor: pointer;
+}
+
+.main--hero__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+}
+
+.main--hero__buttons button {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  gap: 8px;
+  border-radius: 8px;
+  padding: 8px;
+  background: #c2c0c0;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  margin-bottom: 20px;
 }
 
-.scraper-logo > svg {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
 
-.scraper-info {
-  margin-top: 10px;
-  text-align: center;
-}
-
-.scraper-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.scraper-container svg:hover {
-  transform: scale(1.05);
-  transition: all 0.2s ease-in-out;
-}
-
-/* media query */
-
-@media (max-width: 768px) {
-  .scraper-logo {
-    width: 250px;
-    height: 150px;
-  }
-}
-
-@media (max-width: 600px) {
-  .scraper-logo {
-    width: 300px;
-    height: 200px;
-  }
-  .header {
-    padding: 10px 0;
-  }
-  .header .logo {
-    flex-direction: column;
-    font-size: small;
-  }
-}
