--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/*********
+ * RESET *
+ *********/
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -40,14 +44,17 @@ button {
   color: inherit;
 }
 
-/* header */
+/**********
+ * HEADER *
+ **********/
+
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding-inline: 23px;
   padding-top: 20px;
+  padding-inline: 23px;
   background-color: lightgray;
 }
 
@@ -64,13 +71,21 @@ hr {
   margin-block: 20px;
 }
 
+/********
+ * MAIN *
+ ********/
+
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-inline: 25px;
+}
+
+.main--hero {
   background-color: lightgray;
+  width: 100%;
+  padding-inline: 23px;
 }
 
 .main--hero h2 {
@@ -142,4 +157,61 @@ hr {
   margin-bottom: 20px;
 }
 
+.main--companies {
+  padding-inline: 23px;
+}
 
+.main--companies__search-results {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 100%;
+}
+
+.main--companies__search-results--title {
+  color: #1d1b20;
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.main--companies__search-results--text {
+  color: #1d1b20;
+  font-family: "Roboto", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+.main--companies__search-filters {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 24px;
+  margin-bottom: 34px;
+  color: #1d1b20;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+}
+
+.main--companies__search-filters--filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 10px;
+  border-radius: 28px;
+  background: #d8cdbe;
+}
