--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ button {
   padding-top: 20px;
   padding-inline: 23px;
   background-color: lightgray;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 
 .header img {
@@ -72,7 +76,7 @@ hr {
   border: none;
   width: 100%;
   margin-inline: auto;
-  margin-block: 20px;
+  margin-top: 20px;
 }
 
 /********
@@ -84,12 +88,15 @@ hr {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 37px;
+  margin-top: 70px;
 }
 
 .main--hero {
   background-color: lightgray;
   width: 100%;
   padding-inline: 23px;
+  padding-top: 20px;
 }
 
 .main--hero h2 {
@@ -331,4 +338,113 @@ hr {
   line-height: 20px;
   letter-spacing: 0.1px;
   padding: 10px 24px;
+}
+
+/**************
+ * PAGINATION *
+ **************/
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.pagination--numbers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.pagination--numbers span {
+  color: #000;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  cursor: pointer;
+}
+
+.active {
+  display: flex;
+  height: 31px;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 100px;
+  background: #db7900;
+  color: #fff !important;
+}
+
+/**********
+ * TABLET *
+ **********/
+
+@media screen and (min-width: 620px) {
+  .header {
+    padding-inline: 20px;
+  }
+
+  .main--hero {
+    padding-inline: 20px;
+  }
+
+  .main--hero h2 {
+    font-size: 20px;
+  }
+
+  .main--hero__search,
+  .main--hero__search input {
+    font-size: 16px;
+    padding: 12px;
+  }
+
+  .main--hero__buttons button {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  .main--companies {
+    padding-inline: 20px;
+  }
+
+  .main--companies__search-results--title {
+    font-size: 28px;
+  }
+
+  .main--companies__search-results--text {
+    font-size: 14px;
+  }
+
+  .main--companies__search-filters--filter {
+    padding: 10px;
+    font-size: 12px;
+  }
+
+  .main--companies__list--item-info--title {
+    font-size: 18px;
+    margin-bottom: 24px;
+  }
+
+  .main--companies__list--item-info--text {
+    font-size: 14px;
+    padding-bottom: 24px;
+  }
+
+  .main--companies__list--item-buttons .btn-full,
+  .main--companies__list--item-buttons .btn-empty {
+    font-size: 14px;
+    padding: 10px 20px;
+  }
+
+  .pagination--numbers span {
+    font-size: 16px;
+  }
 }
