--- a/css/style.css
+++ b/css/style.css
@@ -170,14 +170,19 @@ hr {
 
 .main--companies {
   padding-inline: 23px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  /* width: 100%; */
 }
 
 .main--companies__search-results {
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: column;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .main--companies__search-results--title {
@@ -236,7 +241,7 @@ hr {
   width: 100%;
   gap: 37px;
   padding-inline: 23px;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
 }
 
 .main--companies__list--item {
@@ -400,10 +405,10 @@ hr {
     font-size: 20px;
   }
 
-  .main--hero__search,
-  .main--hero__search input {
+  .main--hero__search {
     font-size: 16px;
-    padding: 12px;
+    width: 50%;
+    margin-inline: auto;
   }
 
   .main--hero__buttons button {
@@ -446,5 +451,48 @@ hr {
 
   .pagination--numbers span {
     font-size: 16px;
+  }
+}
+
+/**********
+ * DESKTOP *
+ **********/
+
+@media screen and (min-width: 1024px) {
+  .header {
+    padding-inline: 80px;
+  }
+
+  .main {
+    align-items: flex-start;
+  }
+
+  .main--hero h2 {
+    color: #828282;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-top: 85px;
+  }
+
+  .main--companies {
+    padding-inline: 80px;
+    padding-top: 27px;
+  }
+
+  .main--companies__search-results {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .main--companies__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .main--companies__list--item {
+    width: 20%;
   }
 }
