--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@ button {
   cursor: pointer;
 }
 
+ul {
+  list-style: none;
+}
+
+li {
+  list-style: none;
+}
+
 /**********
  * HEADER *
  **********/
@@ -68,6 +76,14 @@ button {
 
 .header img {
   cursor: pointer;
+}
+
+.desktop {
+  display: none;
+}
+
+.header-profile__desktop {
+  display: none;
 }
 
 hr {
@@ -168,13 +184,20 @@ hr {
   margin-bottom: 20px;
 }
 
+.main--filters_desktop {
+  display: none;
+}
+
+.main--companies__sort-desktop {
+  display: none;
+}
+
 .main--companies {
   padding-inline: 23px;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  /* width: 100%; */
 }
 
 .main--companies__search-results {
@@ -182,7 +205,6 @@ hr {
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  /* width: 100%; */
 }
 
 .main--companies__search-results--title {
@@ -463,6 +485,59 @@ hr {
     padding-inline: 80px;
   }
 
+  .header--menu {
+    display: none;
+  }
+
+  .header--logo {
+    order: 1;
+  }
+
+  .header-profile {
+    display: none;
+  }
+
+  .navbar {
+    order: 2;
+  }
+
+  .header-profile__desktop {
+    display: flex;
+    order: 3;
+    color: #1d1b20;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+  }
+
+  hr {
+    order: 4;
+  }
+
+  .desktop {
+    display: flex;
+  }
+
+  .nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 48px;
+  }
+
+  .nav-list__item {
+    color: #1d1b20;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 27px;
+  }
+
   .main {
     align-items: flex-start;
   }
@@ -474,6 +549,75 @@ hr {
     font-weight: 400;
     line-height: 150%;
     margin-top: 85px;
+  }
+
+  .main--hero__buttons {
+    display: none;
+  }
+
+  .main--filters_desktop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding-bottom: 40px;
+    padding-inline: 80px;
+  }
+
+  .main--filters_desktop select {
+    width: 227px;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    border: 1px solid rgba(11, 11, 11, 0.6);
+    color: #494949;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    background-color: lightgray;
+  }
+
+  .main--companies {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .main--companies__sort-desktop {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+  }
+
+  .main--companies__sort-desktop label {
+    color: #1d1b20;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+  }
+
+  .main--companies__sort-desktop select {
+    width: 227px;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    border: 1px solid rgba(11, 11, 11, 0.6);
+    color: #494949;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    background-color: lightgray;
   }
 
   .main--companies {
@@ -493,6 +637,12 @@ hr {
   }
 
   .main--companies__list--item {
-    width: 20%;
+    width: 300px;
+  }
+
+  .main--companies__list--item:hover {
+    border-radius: 12px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3),
+      0px 4px 8px 3px rgba(0, 0, 0, 0.15);
   }
 }
