--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,19 @@ li {
   list-style: none;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+
 /**********
  * HEADER *
  **********/
@@ -410,6 +423,76 @@ hr {
   color: #fff !important;
 }
 
+/*********************
+ * MOBILE NAVIGATION *
+ *********************/
+
+@media (max-width: 700px) {
+  .primary-navigation {
+    gap: clamp(1.5rem, 5vw, 3.5rem);
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background: hsl(var(--white) / 0.05);
+    -webkit-backdrop-filter: blur(1.5rem);
+    backdrop-filter: blur(1.5rem);
+  }
+  
+  .primary-navigation {
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 0%;
+    list-style: none;
+    padding: min(20rem, 15vh) 2rem;
+    margin: 0;
+    flex-direction: column;
+    transform: translateX(100%);
+    transition: transform 500ms ease-in-out;
+  }
+
+  .nav-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  
+  .primary-navigation[data-visible="true"] {
+    transform: translateX(0);
+  }
+  
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    z-index: 2000;
+    left: 1rem;
+    top: 1.5rem;
+    background: transparent;
+    background-image: url("../images/menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    aspect-ratio: 1;
+    border: 0;
+    cursor: pointer;
+  }
+  
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url("../images/icon-close.svg");
+    position: fixed;
+  }
+  
+  .mobile-nav-toggle:focus-visible {
+    outline: 5px solid white;
+    outline-offset: 5px;
+  }
+  
+  .nav-item:is(:not(:last-child)) {
+    margin-bottom: 1.5rem;
+  }
+}
+
+
 /**********
  * TABLET *
  **********/
@@ -497,6 +580,10 @@ hr {
     display: none;
   }
 
+  .mobile-nav-toggle {
+    display: none;
+  }
+
   .navbar {
     order: 2;
   }
@@ -521,7 +608,7 @@ hr {
     display: flex;
   }
 
-  .nav-list {
+  .nav-list__desktop {
     display: flex;
     align-items: center;
     justify-content: center;
