--- a/css/style.css
+++ b/css/style.css
@@ -492,6 +492,72 @@ hr {
   }
 }
 
+/*********
+ * MODAL *
+ *********/
+
+@media (max-width: 700px) {
+  .modal {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 10%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content {
+    background: #F0F0F0;
+    margin: 15% auto;
+    padding: 20px;
+    width: 90%;
+    max-width: 300px;
+    border-radius: 8px;
+  }
+
+  .main--filters_modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 17px;
+    padding: 40px;
+  }
+
+  .main--filters_modal select {
+    width: 227px;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    border: 1px solid rgba(11, 11, 11, 0.6);
+    color: #494949;
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    background-color: lightgray;
+  }
+
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+
 
 /**********
  * TABLET *
@@ -608,7 +674,11 @@ hr {
     display: flex;
   }
 
-  .nav-list__desktop {
+  .modal {
+    display: none;
+  }
+
+  .nav-list {
     display: flex;
     align-items: center;
     justify-content: center;
